# spellcheck_backend_hackathon

./: pyproject.toml
Smart Search Web Service/: README.md  index.html  package-lock.json  package.json
Smart Search Web Service/src/: App.tsx  index.css
Smart Search Web Service/src/components/: Footer.tsx  Header.tsx  SmartSearch.tsx
nlp_server/app/: intent_model.joblib  main.py
nlp_server/app/models/: classfier_model.py  entity_model.py  process_text_model.py  spell_checker_model.py
nlp_server/app/routers/health/: router.py
nlp_server/app/routers/process/: router.py
nlp_server/app/routers/spellcheck/: router.py
nlp_server/app/schemas/: query_history.py  search_dictionary.py
nlp_server/app/services/: entity_extraction.py  intent_classifier.py  spell_checker.py
